--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -22,3 +22,6 @@ auth.password=sentinel
 # Inject the dashboard version. It's required to enable
 # filtering in pom.xml for this resource file.
 sentinel.dashboard.version=@project.version@
+
+sentinel.nacos.serverAddr=10.10.10.12:8848
+sentinel.nacos.namespace=SENTINEL
